# robotics-class-projects

./: README.md
bags/: person_follower.bag
final-project-path-finding/: CMakeLists.txt  README.md  data.yaml  package.xml
final-project-path-finding/launch/: action.launch  color_tester.launch
final-project-path-finding/msg/: RangeUpdate.msg  RobotAction.msg
final-project-path-finding/scripts/: action_manager.py  adjacency.csv  distances_to_matrix.py  main_node.py  play_music.py  record_voice.py  soda_recognition.py  speak.py  tb_image_model.py
particle-filter-localization/: README.md  package.xml
particle-filter-localization/bag/: cloud_initialization_plus_motion.bag  particle_filter.bag
particle-filter-localization/gazebo_custom_meshes/: turtlebot3_maze.dae
particle-filter-localization/launch/: turtlebot3_maze.launch  visualize_particles.launch
particle-filter-localization/map/: maze_map.pgm  maze_map.yaml
particle-filter-localization/rviz/: particle_filter_project_v2.rviz
particle-filter-localization/scripts/: particle_filter.py
particle_filter_localization/: README.md
q-learning/: package.xml
q-learning-project/: CMakeLists.txt  README.md
q-learning-project/scripts/: main.py  (+2 more)
q-learning/gazebo_custom_meshes/: robot_object_green.dae
q-learning/scripts/: color_handling.py  debugging_window.py  main.py  q_learning.py  robot_movement.py  virtual_reset_world.py
q-learning/scripts/action_states/: actions.txt
q_learning_project/: README.md
scripts/: drive_square.bag  drive_square.py  drive_square1.py  follow_wall.py  stop_robot.py
(+35 files in other folders)
